err/brisa-media-tools.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/brisa_media_tools'...
Listing './lib/python3.5/site-packages/brisa_media_tools/applet'...
Compiling './lib/python3.5/site-packages/brisa_media_tools/applet/control.py'...
***   File "./lib/python3.5/site-packages/brisa_media_tools/applet/control.py", line 134
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/brisa_media_tools-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/applications'...
Listing './share/applications/hildon'...
Listing './share/icons'...
Listing './share/icons/hicolor'...
Listing './share/icons/hicolor/16x16'...
Listing './share/icons/hicolor/16x16/hildon'...
Listing './share/icons/hicolor/26x26'...
Listing './share/icons/hicolor/26x26/hildon'...
Listing './share/icons/hicolor/32x32'...
Listing './share/icons/hicolor/32x32/hildon'...
Listing './share/icons/hicolor/40x40'...
Listing './share/icons/hicolor/40x40/hildon'...
Listing './share/icons/hicolor/scalable'...
Listing './share/icons/hicolor/scalable/hildon'...
Listing './share/pixmaps'...
Listing './share/python-wheels'...
